@@ -5,6 +5,7 @@
 "garch","GARCH (Bollerslev and Ghysels, 1996)","exchange rate"
 "jgm-1996","Unit root tests (MacKinnon, 1996)","interest & inflation"
 "klein","System estimation","US macro data"
+"kmenta","System estimation","US macro plus artificial data"
 "leverage","Influential observations","artificial data"
 "longley","Multicollinearity","US employment"
 "mrw","Solow growth model (Mankiw, Romer, Weil)","cross-country"
