@@ -6,6 +6,8 @@ version 1.3.1
   LR over-identification tests for these systems
 - Add Hansen-Sargan over-identification test for SUR and 3SLS
   system estimates
+- Add "--iterate" option for estimation of systems via SUR and
+  3SLS
 - Add "estimate" command for equation systems, and modify the
   "system" command to allow the user to define named systems
 - Add gui configuration for robust standard errors options
@@ -40,6 +42,8 @@ version 1.3.1
   the decimal point
 - Add BIC (Bayesian Information Criterion) to the list of model
   statistics that can be retrieved via genr (internal variable $bic)
+- Add Kmenta (1986) dataset and script, for a further example of
+  system estimation
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
